--- a/src/index.html
+++ b/src/index.html
@@ -1,18 +1,18 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>MyApp</title>
   <base href="/">
+  <meta charset="utf-8">
+  <title>MyApp</title>  
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="assets/css/bootstrap.min.css">
 </head>
 <body>
-  <app-root>
-    <!-- <router-outlet></router-outlet> -->
-    <!-- <app-login></app-login> -->
-  </app-root>
+  <h1 style="text-align:center">
+    Welcome to ts.validator!!
+  </h1>   
+  <app-root></app-root>
 </body>
 </html>
